Fix logo title spacing

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -651,6 +651,7 @@ $spv-navigation-logo: 0.3125rem;
 
   .p-navigation__logo-title {
     color: $color-navigation-text;
+    padding-left: $sph--small;
   }
 
   .p-navigation__item--dropdown-toggle {
